--- a/templates/makersuite.html
+++ b/templates/makersuite.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>Finanacial Web App </h2>
-        <form action="/makersuite" method ="post">
-            <input type="submit" value="Gemini Chatbot">
+        <h2>Gemini chatbox</h2>
+        <form action="/gemini" method ="post">
+            <input type="text" name = "q">
+            <input type="submit" value="Enter">
+            <form action="/" method ="post">
+                <input type="submit" name = "Main">
+               
         </form>
     </div>
 </body>
