--- a/templates/textblob_result.html
+++ b/templates/textblob_result.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h2>Finanacial Web App </h2>
-        <form action="/makersuite" method ="post">
-            <input type="submit" value="Gemini Chatbot">
+        <h2>Sentiment Score: {{r}}</h2>
+        <form action="/" method ="post">
+            <input type="submit" value="Main">
         </form>
-        <form action="/sentiment" method ="post">
-            <input type="submit" value="Sentiment Analysis">
     </div>
 </body>
 </html>
